# mc-pack-assistant

./: .gitignore  DEVELOPMENT.md  README.md  catch_recipe_dump.py  install.ps1  install.sh  item_id_extractor.py  pyproject.toml  retrieve_api_key.py  run_ui.py  server-mods.toml
.github/workflows/: ci.yml
helper-scripts/ui/: catch_recipe_dump.py  item_id_extractor.py
kubejs-scripts/: dump_recipes.js
modules/customizer/: __init__.py  agents.py  cli.py  config.py  data.py  grounded_recipe_modifier_agent.py  rag.py  recipe_modifier.py  recipe_modifier_agent.py  script_writer.py  validation.py
modules/customizer/integrations/: __init__.py  recipes.py
modules/customizer/tools/: __init__.py  search.py  shaped.py  shapeless.py
modules/customizer/tools/recipes/: __init__.py  cooking.py  modify.py  shaped.py  shapeless.py  smithing.py  stonecutting.py
modules/pipeline/: __init__.py  catch_recipe_dump.py  item_id_extractor.py
tests/: conftest.py  test_item_id_extractor.py  test_validation.py
